# Portfolio

./: CNAME  asset-manifest.json  index.html
backend/: package-lock.json  package.json  pyproject.toml
backend/ismportfolio/: .gitignore  package-lock.json  package.json  sanity.cli.js  sanity.config.js
backend/ismportfolio/schemas/: contact.js
backend/knowledge/: db.sqlite3  manage.py
backend/knowledge/company/: models.py  serializer.py  urls.py  views.py
backend/knowledge/company/migrations/: 0001_initial.py
backend/knowledge/knowledge/: settings.py  urls.py
backend/knowledge/products/: models.py  serializer.py  urls.py  views.py
backend/knowledge/products/migrations/: 0001_initial.py  0002_product_description_product_name.py  0003_alter_product_options.py  0004_product_category_product_creation.py
backend/knowledge/utils/: models.py
frontend/Portfolio/: dependencies.txt  package-lock.json  package.json
frontend/knowledge/: package-lock.json  package.json
static/css/: main.0449d083.css  main.0449d083.css.map  main.44ae536a.css  main.44ae536a.css.map  main.4d9d98fb.css  main.4d9d98fb.css.map  main.6c85ac71.css  main.6c85ac71.css.map  main.75f3ea82.css  main.75f3ea82.css.map  main.7d290d43.css  main.7d290d43.css.map  main.9df18c7d.css  main.9df18c7d.css.map  main.b052f587.css  main.b052f587.css.map  main.ba3c5a9c.css  main.ba3c5a9c.css.map  main.d59654bd.css  main.d59654bd.css.map
static/js/: main.03d2f24e.js  main.03d2f24e.js.map  main.15704481.js  main.15704481.js.map  main.25971005.js  main.25971005.js.map  main.282a7934.js  main.282a7934.js.map  (+8 more)
(+25 files in other folders)
